--- a/Views/Bestelling/Create.cshtml
+++ b/Views/Bestelling/Create.cshtml
@@ -124,7 +124,7 @@ else
                 </table>
                 <div class="fw-bold" id="cartTotal">Totaalbedrag: @Model.TotaalBedrag.ToString("C")</div>
 
-                <button type="submit" class="btn btn-primary mt-3">Bestelling bevestigen</button>
+                <button type="submit" class="btn btn-custom-primary mt-3">Bestelling bevestigen</button>
             </div>
         </div>
     </form>
