--- a/Views/Reservation/Create.cshtml
+++ b/Views/Reservation/Create.cshtml
@@ -59,7 +59,7 @@
                     <label asp-for="Opmerking" class="form-label">Speciale verzoeken</label>
                     <textarea asp-for="Opmerking" class="form-control" rows="2"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary w-100">Reserveer</button>
+                <button type="submit" class="btn btn-custom-primary w-100">Reserveer</button>
             </form>
         </div>
     </div>
