--- a/Views/Shared/UnderConstruction.cshtml
+++ b/Views/Shared/UnderConstruction.cshtml
@@ -10,6 +10,6 @@
         <h1>Pagina in opbouw</h1>
         <p>Deze pagina is momenteel nog in ontwikkeling.<br>
         Kom later zeker nog eens terug!</p>
-        <a asp-controller="Home" asp-action="Index" class="btn btn-primary mt-3">Terug naar Home</a>
+        <a asp-controller="Home" asp-action="Index" class="btn btn-custom-primary mt-3">Terug naar Home</a>
     </div>
 </div>
