--- a/Views/Tafel/Create.cshtml
+++ b/Views/Tafel/Create.cshtml
@@ -46,8 +46,8 @@
             </div>
         </div>
         <div class="mt-4 d-flex gap-2">
-            <button type="submit" class="btn btn-primary">Toevoegen</button>
-            <a asp-action="Index" class="btn btn-secondary">Annuleren</a>
+            <button type="submit" class="btn btn-custom-primary">Toevoegen</button>
+            <a asp-action="Index" class="btn btn-custom-secondary">Annuleren</a>
         </div>
     </form>
 </div>
