--- a/Views/Tafel/Index.cshtml
+++ b/Views/Tafel/Index.cshtml
@@ -7,7 +7,7 @@
 <h1 class="mb-4">Tafels</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-primary mb-3">Nieuwe tafel toevoegen</a>
+    <a asp-action="Create" class="btn btn-custom-primary mb-3">Nieuwe tafel toevoegen</a>
 </p>
 
 <table class="table tafel-table align-middle">
