--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -36,10 +36,10 @@
             <div class="mb-2">
                 <span class="text-muted small">Velden gemarkeerd met <span class="text-danger">*</span> zijn verplicht.</span>
             </div>
-            <button type="submit" class="btn btn-primary w-100">Login</button>
+            <button type="submit" class="btn btn-custom-primary w-100">Login</button>
         </form>
 
-        <a class="btn btn-outline-dark mt-3 w-100" asp-controller="Account" asp-action="Registratie">Account aanmaken</a>
+        <a class="btn btn-custom-secondary mt-3 w-100" asp-controller="Account" asp-action="Registratie">Account aanmaken</a>
     </div>
 </div>
 
