--- a/Views/Account/Dashboard.cshtml
+++ b/Views/Account/Dashboard.cshtml
@@ -22,6 +22,10 @@
             <a asp-controller="Reservation" asp-action="Index" class="btn btn-custom-primary mt-3 ms-2">
                 Reservaties bekijken
             </a>
+
+            <a asp-controller="Categorie" asp-action="Index" class="btn btn-custom-primary mt-3 ms-2">
+                Categorieën beheren
+            </a>
         }
     }
 </div>
