--- a/Views/Categorie/Index.cshtml
+++ b/Views/Categorie/Index.cshtml
@@ -27,7 +27,7 @@
                 <td>
                     @if (c.Actief)
                     {
-                        <span class="badge bg-success">Ja</span>
+                        <span class="badge bg-custom-success">Ja</span>
                     }
                     else
                     {
