--- a/Views/Tafel/Index.cshtml
+++ b/Views/Tafel/Index.cshtml
@@ -31,7 +31,7 @@
                 <td>
                     @if (item.Actief)
                     {
-                        <span class="badge bg-success">Ja</span>
+                        <span class="badge bg-custom-success">Ja</span>
                     }
                     else
                     {
