--- a/wwwroot/css/custom.css
+++ b/wwwroot/css/custom.css
@@ -247,7 +247,7 @@ html, body {
     }
 
     /* Badges in tabel */
-    .tafel-table .badge.bg-success {
+    .tafel-table .badge.bg-custom-success {
         background-color: var(--color-orange) !important;
         color: var(--color-darkgray) !important;
         font-weight: 600;
