--- a/Views/Account/Dashboard.cshtml
+++ b/Views/Account/Dashboard.cshtml
@@ -26,6 +26,10 @@
             <a asp-controller="Categorie" asp-action="Index" class="btn btn-custom-primary mt-3 ms-2">
                 Categorieën beheren
             </a>
+
+            <a asp-controller="Product" asp-action="Gerechten" class="btn btn-custom-primary mt-3 ms-2">
+                Gerechten beheren
+            </a>
         }
     }
 </div>
