--- a/Views/Account/Dashboard.cshtml
+++ b/Views/Account/Dashboard.cshtml
@@ -30,6 +30,11 @@
             <a asp-controller="Product" asp-action="Gerechten" class="btn btn-custom-primary mt-3 ms-2">
                 Gerechten beheren
             </a>
+
+            <a asp-controller="Product" asp-action="Dranken" class="btn btn-custom-primary mt-3 ms-2">
+                Dranken beheren
+            </a>
+
         }
     }
 </div>
