--- a/wwwroot/css/custom.css
+++ b/wwwroot/css/custom.css
@@ -284,6 +284,36 @@ html, body {
             color: var(--color-white);
         }
 
+/*HEADER TABLE*/
+    .header-filter {
+        background-color: transparent;
+        color: inherit;
+        border: 0;
+        padding: 0.375rem 0.5rem;
+        font-family: inherit;
+        font-size: inherit;
+        font-weight: 600;
+        line-height: 1;
+        min-width: 110px;
+        -webkit-appearance: menulist;
+        appearance: menulist;
+    }
+
+        .header-filter:focus {
+            outline: none;
+            box-shadow: none;
+        }
+
+        .header-filter option {
+            background-color: #212529; 
+            color: #fff;
+        }
+
+    .table thead th .header-filter {
+        margin: 0;
+        vertical-align: middle;
+    }
+
 /* =========================
    ALGEMENE BUTTONS (ALLE PAGINA'S)
    ========================= */
