--- a/Views/Product/Gerechten/Create.cshtml
+++ b/Views/Product/Gerechten/Create.cshtml
@@ -40,6 +40,12 @@
                     <label asp-for="Actief" class="form-check-label ms-2"></label>
                 </div>
             </div>
+            <div class="col-12">
+                <div class="form-check">
+                    <input asp-for="Suggestie" class="form-check-input" />
+                    <label asp-for="Suggestie" class="form-check-label ms-2">Suggestie</label>
+                </div>
+            </div>
             <div class="col-12 d-flex gap-2 mt-3">
                 <button type="submit" class="btn btn-custom-primary">Toevoegen</button>
                 <a asp-action="Gerechten" class="btn btn-custom-secondary">Annuleren</a>
