Fixing toewijzen en deleting tafel

--- a/Views/Tafel/Delete.cshtml
+++ b/Views/Tafel/Delete.cshtml
@@ -6,6 +6,9 @@
 
 <h2>Tafel verwijderen</h2>
 
+@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+
 <div class="alert alert-warning">
     Weet je zeker dat je deze tafel wilt verwijderen?
 </div>
