Fixed Routing and navbar items

--- a/Views/Bestelling/Bevestiging.cshtml
+++ b/Views/Bestelling/Bevestiging.cshtml
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="text-center">
-            <a href="/Bestelling/Create?reservatieId=@reservatieId" class="btn btn-success">
+            <a href="/Bestelling/Create/@reservatieId" class="btn btn-success">
                 Nieuwe bestelling plaatsen
             </a>
         </div>
