--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -43,9 +43,9 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between align-items-center">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
+                        @* <li class="nav-item">
                             <a class="nav-link @(IsActive("Menu", null) ? "active" : "")" asp-area="" asp-controller="Menu" asp-action="Index">Menu</a>
-                        </li>
+                        </li> *@
                         <!-- <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Photos" asp-action="Index">Foto's</a>
                         </li> -->
@@ -57,9 +57,12 @@
                                 Home
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link @(IsActive("Reservation", "Create") ? "active" : "")" asp-controller="Reservation" asp-action="Create">Reserveren</a>
-                        </li>
+                        @if (User.IsInRole("Eigenaar") || User.IsInRole("Zaalverantwoordelijke") || User.IsInRole("Klant"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link @(IsActive("Reservation", "Create") ? "active" : "")" asp-controller="Reservation" asp-action="Create">Reserveren</a>
+                            </li>
+                        }
                         @* <li class="nav-item">
                             <a class="nav-link @(IsActive("Home", "Privacy") ? "active" : "")"
                                asp-area=""
@@ -68,9 +71,9 @@
                                 Privacy
                             </a>
                         </li> *@
-                        <li class="nav-item">
+                        @* <li class="nav-item">
                             <a class="nav-link @(IsActive("Contact", "Index") ? "active" : "")" asp-area="" asp-controller="Contact" asp-action="Index">Contact</a>
-                        </li>
+                        </li> *@
                         @if (User.IsInRole("Kok") || User.IsInRole("Ober") || User.IsInRole("Eigenaar"))
                         {
                             <li class="nav-item">
@@ -129,20 +132,20 @@
             </ul>
             @if (User.Identity.IsAuthenticated)
             {
-                    if (Context.Request.Path.StartsWithSegments("/Account/Dashboard", StringComparison.OrdinalIgnoreCase))
-                    {
-                            <form asp-controller="Account" asp-action="Logout" method="post" class="justify-content-center">
-                                <button type="submit" class="nav-link">Logout</button>
-                            </form>
-                    }
-                    else
-                    {
-                            <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Dashboard">Account</a>
-                    }
+                        if (Context.Request.Path.StartsWithSegments("/Account/Dashboard", StringComparison.OrdinalIgnoreCase))
+                        {
+                                    <form asp-controller="Account" asp-action="Logout" method="post" class="justify-content-center">
+                                        <button type="submit" class="nav-link">Logout</button>
+                                    </form>
+                        }
+                        else
+                        {
+                                    <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Dashboard">Account</a>
+                        }
             }
             else
             {
-                    <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Login">Aanmelden</a>
+                        <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Login">Aanmelden</a>
             }
 
          </nav> -->
