--- a/Views/Account/RegistratieBevestigen.cshtml
+++ b/Views/Account/RegistratieBevestigen.cshtml
@@ -36,8 +36,8 @@
             <input type="hidden" asp-for="Land" />
             <input type="hidden" asp-for="Password" />
             <input type="hidden" asp-for="ConfirmPassword" />
-            <button type="submit" class="btn btn-primary w-100">Account aanmaken</button>
-            <button type="submit" name="terug" value="true" formaction="/Account/Registratie?terug=true" class="btn btn-dark w-100 mt-2">Terug</button>
+            <button type="submit" class="btn btn-custom-primary w-100">Account aanmaken</button>
+            <button type="submit" name="terug" value="true" formaction="/Account/Registratie?terug=true" class="btn btn-custom-secondary w-100 mt-2">Terug</button>
         </form>
     </div>
 </div>
