changed styling for container on every page to be the same

--- a/Views/Account/RegistratieBevestigen.cshtml
+++ b/Views/Account/RegistratieBevestigen.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Registratie Bevestigen";
 }
 
-<div class="container d-flex justify-content-center" style="margin-top: 60px;">
+<div class="container d-flex justify-content-center mt-3">
     <div class="col-md-8">
-        <h2 class="mb-4 text-center">Bevestig uw gegevens</h2>
+        <h1 class="mb-4 text-center">Bevestig uw gegevens</h1>
         <form asp-action="RegistratieBevestigen" method="post">
             <dl class="row">
                 <dt class="col-sm-4">E-mailadres</dt>
