--- a/Views/Product/Dranken/Edit.cshtml
+++ b/Views/Product/Dranken/Edit.cshtml
@@ -3,8 +3,8 @@
 @{
     ViewData["Title"] = "Drank bewerken";
 }
-
-<h2 class="mb-4">Drank bewerken</h2>
+<div class="mt-3">
+<h1 class="mb-4">Drank bewerken</h1>
 <div class="card shadow-sm">
     <div class="card-body">
         <div asp-validation-summary="All" class="text-danger"></div>
@@ -54,6 +54,7 @@
             </div>
         </form>
     </div>
+</div>
 </div>
 @section Scripts {
     @{
