--- a/Views/Product/Gerechten/Edit.cshtml
+++ b/Views/Product/Gerechten/Edit.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "Gerecht bewerken";
 }
 
-<h2 class="mb-4">Gerecht bewerken</h2>
+<div class="mt-3">
+<h1 class="mb-4">Gerecht bewerken</h1>
 <div class="card shadow-sm">
     <div class="card-body">
         <div asp-validation-summary="All" class="text-danger"></div>
@@ -54,6 +55,7 @@
             </div>
         </form>
     </div>
+</div>
 </div>
 @section Scripts {
     @{
