--- a/Views/Rekening/GeenGeserveerdeBestellingen.cshtml
+++ b/Views/Rekening/GeenGeserveerdeBestellingen.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Geen geserveerde bestellingen";
     var reservationId = ViewBag.ReservatieId ?? "Onbekend";
 }
-<div class="container py-5">
+<div class="container mt-3">
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="alert alert-warning text-center shadow-sm">
