--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Login Page";
 }
 
-<div class="container d-flex justify-content-center" style="margin-top: 120px;">
+<div class="container d-flex justify-content-center mt-3">
     <div class="col-md-4">
-        <h2 class="mb-4 text-center">Login</h2>
+        <h1 class="mb-4 text-center">Login</h1>
 
         @* Show non-field-specific errors at the top, styled for prominence *@
         @{
