--- a/Views/Product/Gerechten/Create.cshtml
+++ b/Views/Product/Gerechten/Create.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "Gerecht aanmaken";
 }
 
-<h2 class="mb-4">Gerecht aanmaken</h2>
+<div class="mt-3">
+<h1 class="mb-4">Gerecht aanmaken</h1>
 <div class="card shadow-sm">
     <div class="card-body">
         <form asp-action="CreateGerecht" method="post" class="row g-3">
@@ -52,6 +53,7 @@
             </div>
         </form>
     </div>
+</div>
 </div>
 @section Scripts {
     @{
