--- a/Views/Rekening/Bevestiging.cshtml
+++ b/Views/Rekening/Bevestiging.cshtml
@@ -3,7 +3,7 @@
     var reservatieId = ViewBag.ReservatieId;
 }
 
-<div class="container d-flex justify-content-center" style="margin-top: 60px;">
+<div class="container d-flex justify-content-center mt-3">
     <div class="col-md-8">
         <div class="alert alert-success d-flex align-items-center mb-4" role="alert">
             <i class="bi bi-check-circle-fill fs-2 me-3"></i>
