--- a/Views/Rekening/Mislukt.cshtml
+++ b/Views/Rekening/Mislukt.cshtml
@@ -6,7 +6,7 @@
     var isDefaultError = string.IsNullOrEmpty(errorType);
 }
 
-<div class="container d-flex justify-content-center" style="margin-top: 60px;">
+<div class="container d-flex justify-content-center mt-3">
     <div class="col-md-8">
         @if (isDefaultError)
         {
