--- a/Views/Reservation/Toewijzen.cshtml
+++ b/Views/Reservation/Toewijzen.cshtml
@@ -3,7 +3,8 @@
     ViewData["Title"] = "Tafels toewijzen";
 }
 
-<h2>Tafels toewijzen</h2>
+<div class="mt-3">
+<h1>Tafels toewijzen</h1>
 @if (TempData["Message"] != null)
 {
     <div class="alert alert-success">@TempData["Message"]</div>
@@ -27,3 +28,4 @@
         </div>
     </div>
 }
+</div>
