Fixing issues with afrekenen and add button

--- a/Views/Rekening/Bevestiging.cshtml
+++ b/Views/Rekening/Bevestiging.cshtml
@@ -13,8 +13,8 @@
             </div>
         </div>
         <div class="text-center">
-            <a href="/Reservaties/Index" class="btn btn-warning">
-                Terug naar reservaties
+            <a asp-controller="Reservation" asp-action="Index" class="btn btn-custom-primary mt-3">
+                Terug naar Reservaties
             </a>
         </div>
     </div>
