--- a/Views/Reservation/Toewijzen.cshtml
+++ b/Views/Reservation/Toewijzen.cshtml
@@ -23,7 +23,7 @@
                         <option value="@tafel.Id">Tafel @tafel.TafelNummer</option>
                     }
                 </select>
-                <button type="submit" class="btn btn-primary ms-2">Toewijzen</button>
+                <button type="submit" class="btn btn-custom-primary ms-2">Toewijzen</button>
             </form>
         </div>
     </div>
