--- a/Views/Rekening/Mislukt.cshtml
+++ b/Views/Rekening/Mislukt.cshtml
@@ -46,12 +46,12 @@
         <div class="text-center">
             @if (isDefaultError)
             {
-                <a href="/Rekening/Afrekenen/@reservatieId" class="btn btn-danger">
+                <a asp-controller="Rekening" asp-action="Afrekenen" asp-route-reservatieId="@reservatieId" class="btn btn-danger">
                     Opnieuw proberen
                 </a>
                 <br />
             }
-            <a href="/Reservaties/Index" class="btn btn-warning">
+            <a asp-controller="Reservation" asp-action="Index" class="btn btn-warning">
                 Terug naar reservaties
             </a>
         </div>
