Fixing validation on table create

--- a/Views/Tafel/Create.cshtml
+++ b/Views/Tafel/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model Restaurant.Models.Tafel
+﻿@using Restaurant.ViewModels.Tafel
+@model TafelCreateViewModel
 
 @{
     ViewData["Title"] = "Tafel toevoegen";
